fix scroller appearing after adding last character that couses overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ aside {
 
     margin-left: auto;
 
-    padding: 2rem;
+    padding: 2rem 2rem 1rem 2rem;
 
     display: flex;
     flex-direction: column;
